更改接口使用泛型
# Conflicts:
#	src/main/java/org/gtlcore/gtlcore/mixin/gtm/registry/GTRecipeTypeMixin.java